# python-microservices

./: .dockerignore  .gitignore  BUGS.md  Dockerfile  Makefile  README.md  TODOs.md  __init__.py  config_manager.py  docker-compose.yml  docker-postgres-entrypoint.sh  endtoend.md  logfile  main.py  package-lock.json  package.json  playground.py  pylint.rc  pyproject.toml  setup-env.sh  test_endpoints.py  test_sample_endpoint.py  test_sample_function.py
.github/workflows/: makefile.yml  pythonapp-devops.yml
Extras/: BUGS.md  TODOs.md  backup.yml  commands.md  playground.py  pythonapp-devops.yml
Postman Collections/: Testing_collections.json
apis/: __init__.py  todos.py
app/: Makefile  main.py  pytest.ini
app/apis/: todos.py
app/config/: config.json
app/data/: chatGPT.py  models.py  setup.py  todo.json
app/secrets/: .env.sample  secrets_template.json
app/tests/01_unit_tests/: test_access_token.py  test_config_manager.py  test_helper.py  test_setup.py  test_todos.py  test_token.py
app/tests/02_integration_tests/: old_integration.py  test_exceptions.py  test_home.py  test_integration.py  test_registration.py  test_todos.py  test_token_renew.py
app/utils/: access_token.py  config_manager.py  custom_exceptions.py  helper.py  token.py
config/: config_manager.py
data/: todo.json
graphql/: .babelrc  .dockerignore  Dockerfile  package-lock.json  package.json
graphql/src/: data.json  db.js  helper.js  index.js  schema.graphql  schema.js
nginx/: Dockerfile  nginx.conf
source/: sample_endpoint.py  sample_function.py
source/Data/: sample_data.py
source/todos/: todos.py
tests/: sample_data.py  test_endpoints.py  test_helper.py  test_todo_helper.py  test_todos.py
tests/01_unit_tests/: test_todo_helper.py  test_todos.py
tests/02_integration_tests/: test_integration.py  test_integration_200_ok.py
todos/apis/: todos.py
todos/data/: todo.json
todos/utils/: config_manager.py  helper.py
utils/: helper.py  todo_helper.py
(+5 files in other folders)
