[tool.poetry]
name = "microservices"
version = "0.1.0"
description = "A CRUD microservices using FastAPI"
authors = ["DS <dhanasekars@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pylint = "^2.17.5"
black = "^23.7.0"
fire = "^0.5.0"
fastapi = "^0.103.0"
uvicorn = "^0.23.2"
textblob = "^0.17.1"
pydantic = "^2.2.1"
requests = "^2.31.0"
httpx = "^0.24.1"
attr = "^0.3.2"
coverage = "^7.3.0"
hypothesis = "^6.84.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
